[tool.poetry]
name = "scraping-scrapy"
version = "0.1.0"
description = ""
authors = ["serhiikhkr <05hello.world11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
